# backend/Api_Gateway/api/gen/v1/ApiService_grpc.pb.go
@@ -28,6 +28,7 @@ const (
 	ApiService_GetAllParsingChannels_FullMethodName               = "/api.v1.ApiService/GetAllParsingChannels"
 	ApiService_AddNewParsingChannel_FullMethodName                = "/api.v1.ApiService/AddNewParsingChannel"
 	ApiService_AddNewUserCustomParsingChannel_FullMethodName      = "/api.v1.ApiService/AddNewUserCustomParsingChannel"
+	ApiService_DeleteUserCustomParsingChannel_FullMethodName      = "/api.v1.ApiService/DeleteUserCustomParsingChannel"
 	ApiService_DeleteParsingChannel_FullMethodName                = "/api.v1.ApiService/DeleteParsingChannel"
 	ApiService_GetAllParsingChannelsWithCategories_FullMethodName = "/api.v1.ApiService/GetAllParsingChannelsWithCategories"
 	ApiService_GetAllCategories_FullMethodName                    = "/api.v1.ApiService/GetAllCategories"
@@ -46,6 +47,7 @@ type ApiServiceClient interface {
 	GetAllParsingChannels(ctx context.Context, in *GetAllParsingChannelsRequest, opts ...grpc.CallOption) (*GetAllParsingChannelsResponse, error)
 	AddNewParsingChannel(ctx context.Context, in *AddNewParsingChannelRequest, opts ...grpc.CallOption) (*AddNewParsingChannelResponse, error)
 	AddNewUserCustomParsingChannel(ctx context.Context, in *AddNewUserCustomParsingChannelRequest, opts ...grpc.CallOption) (*AddNewUserCustomParsingChannelResponse, error)
+	DeleteUserCustomParsingChannel(ctx context.Context, in *DeleteUserCustomParsingChannelRequest, opts ...grpc.CallOption) (*DeleteUserCustomParsingChannelResponse, error)
 	DeleteParsingChannel(ctx context.Context, in *DeleteParsingChannelRequest, opts ...grpc.CallOption) (*DeleteParsingChannelResponse, error)
 	GetAllParsingChannelsWithCategories(ctx context.Context, in *GetAllParsingChannelsWithCategoriesRequest, opts ...grpc.CallOption) (*GetAllParsingChannelsWithCategoriesResponse, error)
 	GetAllCategories(ctx context.Context, in *GetAllCategoriesRequest, opts ...grpc.CallOption) (*GetAllCategoriesResponse, error)
@@ -149,6 +151,16 @@ func (c *apiServiceClient) AddNewUserCustomParsingChannel(ctx context.Context, i
 	return out, nil
 }
 
+func (c *apiServiceClient) DeleteUserCustomParsingChannel(ctx context.Context, in *DeleteUserCustomParsingChannelRequest, opts ...grpc.CallOption) (*DeleteUserCustomParsingChannelResponse, error) {
+	cOpts := append([]grpc.CallOption{grpc.StaticMethod()}, opts...)
+	out := new(DeleteUserCustomParsingChannelResponse)
+	err := c.cc.Invoke(ctx, ApiService_DeleteUserCustomParsingChannel_FullMethodName, in, out, cOpts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
 func (c *apiServiceClient) DeleteParsingChannel(ctx context.Context, in *DeleteParsingChannelRequest, opts ...grpc.CallOption) (*DeleteParsingChannelResponse, error) {
 	cOpts := append([]grpc.CallOption{grpc.StaticMethod()}, opts...)
 	out := new(DeleteParsingChannelResponse)
@@ -192,6 +204,7 @@ type ApiServiceServer interface {
 	GetAllParsingChannels(context.Context, *GetAllParsingChannelsRequest) (*GetAllParsingChannelsResponse, error)
 	AddNewParsingChannel(context.Context, *AddNewParsingChannelRequest) (*AddNewParsingChannelResponse, error)
 	AddNewUserCustomParsingChannel(context.Context, *AddNewUserCustomParsingChannelRequest) (*AddNewUserCustomParsingChannelResponse, error)
+	DeleteUserCustomParsingChannel(context.Context, *DeleteUserCustomParsingChannelRequest) (*DeleteUserCustomParsingChannelResponse, error)
 	DeleteParsingChannel(context.Context, *DeleteParsingChannelRequest) (*DeleteParsingChannelResponse, error)
 	GetAllParsingChannelsWithCategories(context.Context, *GetAllParsingChannelsWithCategoriesRequest) (*GetAllParsingChannelsWithCategoriesResponse, error)
 	GetAllCategories(context.Context, *GetAllCategoriesRequest) (*GetAllCategoriesResponse, error)
@@ -230,6 +243,9 @@ func (UnimplementedApiServiceServer) AddNewParsingChannel(context.Context, *AddN
 }
 func (UnimplementedApiServiceServer) AddNewUserCustomParsingChannel(context.Context, *AddNewUserCustomParsingChannelRequest) (*AddNewUserCustomParsingChannelResponse, error) {
 	return nil, status.Error(codes.Unimplemented, "method AddNewUserCustomParsingChannel not implemented")
+}
+func (UnimplementedApiServiceServer) DeleteUserCustomParsingChannel(context.Context, *DeleteUserCustomParsingChannelRequest) (*DeleteUserCustomParsingChannelResponse, error) {
+	return nil, status.Error(codes.Unimplemented, "method DeleteUserCustomParsingChannel not implemented")
 }
 func (UnimplementedApiServiceServer) DeleteParsingChannel(context.Context, *DeleteParsingChannelRequest) (*DeleteParsingChannelResponse, error) {
 	return nil, status.Error(codes.Unimplemented, "method DeleteParsingChannel not implemented")
@@ -422,6 +438,24 @@ func _ApiService_AddNewUserCustomParsingChannel_Handler(srv interface{}, ctx con
 	return interceptor(ctx, in, info, handler)
 }
 
+func _ApiService_DeleteUserCustomParsingChannel_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(DeleteUserCustomParsingChannelRequest)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(ApiServiceServer).DeleteUserCustomParsingChannel(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: ApiService_DeleteUserCustomParsingChannel_FullMethodName,
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(ApiServiceServer).DeleteUserCustomParsingChannel(ctx, req.(*DeleteUserCustomParsingChannelRequest))
+	}
+	return interceptor(ctx, in, info, handler)
+}
+
 func _ApiService_DeleteParsingChannel_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
 	in := new(DeleteParsingChannelRequest)
 	if err := dec(in); err != nil {
@@ -518,6 +552,10 @@ var ApiService_ServiceDesc = grpc.ServiceDesc{
 		{
 			MethodName: "AddNewUserCustomParsingChannel",
 			Handler:    _ApiService_AddNewUserCustomParsingChannel_Handler,
+		},
+		{
+			MethodName: "DeleteUserCustomParsingChannel",
+			Handler:    _ApiService_DeleteUserCustomParsingChannel_Handler,
 		},
 		{
 			MethodName: "DeleteParsingChannel",
